changed: form section headings left-aligned again https://github.com/kobotoolbox/enketo-express/issues/331

--- a/src/sass/core/_main.scss
+++ b/src/sass/core/_main.scss
@@ -19,7 +19,7 @@ $media-margin: 10px;
         margin-top: 9px;
         margin-bottom: 9px;
         color: $brand-primary-color;
-        text-align: center;
+        text-align: left;
     }
 }
 
